--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "homepage": "https://developerfolio.js.org/",
   "name": "saadpasta.github.io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://alexaking.github.io/portfolio",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.4",
     "apollo-boost": "^0.4.4",
     "colorthief": "^2.3.0",
-    "gh-pages": "^2.1.1",
     "graphql": "^14.5.8",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -43,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "prettier": "^2.2.1"
   }
 }
