--- a/package.json
+++ b/package.json
@@ -44,5 +44,16 @@
   "devDependencies": {
     "gh-pages": "^2.2.0",
     "prettier": "^2.2.1"
+  },
+  "description": "![ReactJS Resume Website Template](portfolio.png?raw=true \"ReactJS Resume Website Template\")",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alexaking/portfolio-react-cp.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/alexaking/portfolio-react-cp/issues"
   }
 }
