--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alexaking/portfolio.git"
+    "url": "git+https://github.com/alexaking/portfolio-react-cp.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/alexaking/portfolio/issues"
+    "url": "https://github.com/alexaking/portfolio-react-cp/issues"
   }
 }
